webapp/primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-primary-svc
  labels:
    app: webapp
spec:
  selector:
    statefulset.kubernetes.io/pod-name: webapp-0
    app: webapp
  ports:
    - name: http
      protocol: TCP
      port: 9000
  type: ClusterIP
