webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      protocol: TCP
      port: 9000
  clusterIP: None
